crates/swc_ecma_parser/tests/errors/source-phase-imports/too-many-args/input.js
import.source('a', 'b', 'c');
